src/App.css
@import url(./components/form/Form.css);
@import url(./components/output/resume.css);
/* @import url(./components/resume/styles/CvOutput.css); */

:root {
  --main-bg: #f3f4f6;
  --black-text-color: black;
  --white-text-color: white;
  --gray-text-color: #636363;
}

.App {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
}

.toggle-default-btn {
  margin: 1rem;
  padding: 0.5rem 1rem;
  font-weight: 500;
  background-color: #444;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  text-align: center;
  align-items: flex-start;
  margin: 1rem;
  padding: 1rem;
}

#form-area {
  width: 45vw;
  max-height: 95vh;
  position: sticky;
  top: 0;
  overflow-y: auto;
}

/* 
#form-area::-webkit-scrollbar {
  width: 6px;
}

#form-area::-webkit-scrollbar-thumb {
  background-color: #ccc;
  border-radius: 3px;
} */

#form-area section {
  background-color: #fff;
  margin: 1rem;
  padding: 1rem;
  box-shadow: 0px 0px 15px 0px #00000069;
  border-radius: 16px;
}

#resume-area {
  width: 45vw;
}

.accordion-content {
  overflow: hidden;
  transition: max-height 0.3s ease-out;
}

.accordion-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

.accordion-header h2 {
  margin: 0;
}

.icon {
  transition: transform 0.3s ease;
  font-size: 1.28rem;
}

/* .icon:hover {
  font-size: 1.4rem;
} */

.btn {
  margin: 10px;
}

footer {
  text-align: center;
  padding: 1rem;
}

.footer-link {
  display: inline-flex;
  align-items: center;
  gap: 0.5rem;
  color: #333;
  text-decoration: none;
}

.footer-icon {
  font-size: 1.2rem;
}

@media screen and (max-width: 320px) {
  .container {
    width: 100%;
    margin: calc(0.3rem + 1vw);
    padding: calc(0.3rem + 1vw);
    margin: 0;
    padding: 0;
  }
}

@media screen and (min-width: 900px) {
  .container {
    flex-direction: row;
    gap: 2rem;
    max-width: min-content;
  }
}

@media screen and (max-width: 1400px) {
  #resume-area {
    height: 70vh;
  }
}

@media screen and (max-width: 1150px) {
  .container {
    gap: 0;
  }
}

@media screen and (max-width: 900px) {
  #form-area {
    width: 100%;
    position: relative;
  }
  #form-area section {
    max-width: 100%;
    padding: 0;
  }

  #form-area section > button {
    padding: 0;
    font-size: 0.85rem;
  }

  #form-area section form {
    margin: 15px 0;
  }

  #resume-area {
    width: 90vw;
    height: 90vh;
  }
}

@media screen and (max-width: 480px) {
  #resume-area {
    height: 75vh;
  }
}

